--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "mongodb": "^6.14.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.12.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
