--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.14.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9"
